added raw registration