@@ -1,11 +1,13 @@
 package ru.alexdev.project.electronic_lib.details;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import ru.alexdev.project.electronic_lib.models.AuthUser;
 import ru.alexdev.project.electronic_lib.models.Reader;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class AuthUserDetails implements UserDetails {
@@ -18,7 +20,7 @@ public class AuthUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(new SimpleGrantedAuthority(authUser.getRole()));
     }
 
     @Override
